fix(trace-viewer): fix ui issue on network request details
fixes can not show full body in network request details when response have multiple line, and fixes the scrollbar display issue in request details.

Fixes #32552

--- a/packages/trace-viewer/src/ui/networkResourceDetails.css
+++ b/packages/trace-viewer/src/ui/networkResourceDetails.css
@@ -16,9 +16,10 @@
 
 .network-request-details-tab {
   width: 100%;
+  height: 100%;
   user-select: text;
   line-height: 24px;
-  margin-left: 10px;
+  padding-left: 10px;
   overflow: auto;
 }
 
